ingress/frontends/normal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ingress
  namespace: lunaris-frontends
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    # TODO: Uncomment nginx.ingress.kubernetes.io/whitelist-source-range: 173.245.48.0/20, 103.21.244.0/22, 103.22.200.0/22, 103.31.4.0/22, 141.101.64.0/18, 108.162.192.0/18, 190.93.240.0/20, 188.114.96.0/20, 197.234.240.0/22, 198.41.128.0/17, 162.158.0.0/15, 104.16.0.0/13, 104.24.0.0/14, 172.64.0.0/13, 131.0.72.0/22
spec:
  tls:
  - hosts:
    - lunarisapp.com
    secretName: cloudflare-certificate
  - hosts:
    - buy.lunarisapp.com
    secretName: cloudflare-certificate
  - hosts:
    - app.lunarisapp.com
    secretName: cloudflare-certificate
  rules:
  - host: lunarisapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
  - host: buy.lunarisapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buy-service
            port:
              number: 80
  - host: app.lunarisapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
